# obs-timer

./: README.MD  docker-compose.yaml  events.py  pyproject.toml  test.py
backend/: Dockerfile  main.py
backend/fischer/: game_clock.py  test_game_clock.py  timer.py
fischer/: game_clock.py  gameclock  test_timer.py  timer.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.svelte  main.ts
frontend/src/components/: PlayerControl.svelte  Score.svelte  ScoreAction.svelte  TimeKeeper.svelte  ToggleFullscreen.svelte
frontend/src/models/: Action.model.ts  sock.model.ts
frontend/src/pages/: Home.svelte  Player.svelte  Scorer.svelte  Timer.svelte
frontend/src/stores/: websocket.store.ts
jennga-frontend/: package-lock.json  package.json  rollup.config.js
jennga-frontend/src/: App.svelte
jennga-frontend/src/components/: PlayerBackground.svelte  PlayerControl.svelte  Score.svelte  ScoreAction.svelte  TimeKeeper.svelte
jennga-frontend/src/models/: Action.model.ts  Timer.model.ts  sock.model.ts
jennga-frontend/src/pages/: Home.svelte  Player.svelte  Timer.svelte
jennga-frontend/src/stores/: websocket.store.ts
nginx/: local.conf
